add IBoulet and IBaction

--- a/BullsEye/BullsEye/Base.lproj/Main.storyboard
+++ b/BullsEye/BullsEye/Base.lproj/Main.storyboard
@@ -68,10 +68,16 @@
                                 <rect key="frame" x="34" y="264" width="71" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" title="Start Over"/>
+                                <connections>
+                                    <action selector="startOver" destination="BYZ-38-t0r" eventType="touchUpInside" id="Wxt-WN-8r1"/>
+                                </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="infoLight" showsTouchWhenHighlighted="YES" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lRD-mX-ssB">
                                 <rect key="frame" x="514" y="268" width="22" height="22"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <connections>
+                                    <action selector="showAbout" destination="BYZ-38-t0r" eventType="touchUpInside" id="xOy-bw-UXf"/>
+                                </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Score:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wxf-Ja-aeA">
                                 <rect key="frame" x="140" y="269" width="50" height="21"/>
@@ -104,6 +110,11 @@
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     </view>
+                    <connections>
+                        <outlet property="roundLabel" destination="sDv-dI-kmh" id="Iyp-BX-jjv"/>
+                        <outlet property="scoreLabel" destination="wxf-Ja-aeA" id="5FA-qN-6jd"/>
+                        <outlet property="sliderBar" destination="YmX-PW-A9s" id="wTW-gt-fAZ"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
